--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
             android:id="@+id/seekBar"
             android:layout_width="235dp"
             android:layout_height="19dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="15dp"
             app:layout_constraintBottom_toTopOf="@+id/textView" />
 
         <TextView
@@ -28,26 +28,9 @@
             android:layout_height="wrap_content"
             android:text="Hello World!" />
 
-        <EditText
-            android:id="@+id/editTextTextPersonName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Name"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="sendMessage"
-            android:text="Send"
-            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
-
         <TextView
             android:id="@+id/textView_contentObserver"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="15dp"
