--- a/app/src/main/res/layout/message_overlay.xml
+++ b/app/src/main/res/layout/message_overlay.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/msg_box"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
