--- a/app/src/main/res/layout/message_overlay.xml
+++ b/app/src/main/res/layout/message_overlay.xml
@@ -6,12 +6,12 @@
     android:layout_height="150dp">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
@@ -19,14 +19,28 @@
                 android:id="@+id/button_drag"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="5dp"
+                android:layout_marginStart="10dp"
                 android:text="Drag/Scroll" />
+
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+
+            <Button
+                android:id="@+id/button_fold"
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="5dp"
+                android:layout_gravity="right"
+                android:text="—" />
 
             <Button
                 android:id="@+id/button_dismiss"
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="5dp"
+                android:layout_marginEnd="10dp"
+                android:layout_gravity="right"
                 android:text="×" />
 
         </LinearLayout>
@@ -34,7 +48,7 @@
 
         <TextView
             android:id="@+id/msg_box"
-            android:layout_width="350dp"
+            android:layout_width="fill_parent"
             android:layout_height="200dp"
             android:text="Hello message world!\nThis is a message."
             android:background="#ffcccc"
