Workable version to retain notification setting; add color to overlay bar

--- a/app/src/main/res/layout/message_overlay.xml
+++ b/app/src/main/res/layout/message_overlay.xml
@@ -13,7 +13,8 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:background="#fff4ce">
 
             <Button
                 android:id="@+id/button_drag"
